# Ichi

./: .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: copy_resources.in
ichi/: Main.cpp  Platform.hpp
ichi/include/: Coroutines.hpp  Entity.hpp  Game.hpp  Image.hpp  Input.hpp  KeyCodes.hpp  Pixel.hpp  Profiler.hpp  Renderer.hpp  Resources.hpp  Sprite.hpp  Tile.hpp  Time.hpp
ichi/source/: Coroutines.cpp  Entity.cpp  Game.cpp  Image.cpp  Input.cpp  Pixel.cpp  Profiler.cpp  Renderer.cpp  Resources.cpp  Sprite.cpp  Tile.cpp  Time.cpp
src/: main.cpp
